# arcanite-unified

./: MANIFEST.in  pyproject.toml
arcanite/: __init__.py
arcanite/cards/json/tarot/: c01.json  c02.json  c03.json  c04.json  c05.json  c06.json  c07.json  c08.json  c09.json  c10.json  c11.json  c12.json  c13.json  c14.json  m00.json  m01.json  m02.json  m03.json  m04.json  m05.json  m06.json  m07.json  m08.json  m09.json  m10.json  m11.json  m12.json  m13.json  m14.json  m15.json  m16.json  m17.json  m18.json  m19.json  m20.json  m21.json  p01.json  p02.json  p03.json  p04.json  (+38 more)
arcanite/core/: deck.py  spread.py
arcanite/lenormand/: __init__.py
arcanite/spreads/: lenormand-spreads.json
arcanite_unified.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cards/json/tarot/: c04.json  c12.json  m01.json  m02.json  m04.json  m07.json  m09.json  m12.json  m15.json  m19.json  p03.json  p06.json  p10.json  p12.json  s02.json  s04.json  s05.json  s07.json  s10.json  s12.json  s13.json  w02.json  w09.json  w10.json  w13.json
core/: __init__.py  models.py
