[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "arcanite-unified"
version = "0.3.0"
description = "Unified tarot engine: arcanite + Waite original text + TarotKit bilingual data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jinja2",
    "pyyaml",
]
