[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcanite-unified"
version = "0.3.0"
description = "Unified tarot engine: arcanite + Waite original + TarotKit bilingual"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "jinja2", "pyyaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["arcanite*"]
